--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>홈에 오신것을 환영합니다.</title>
+    <script>
+        function checkPassword() {
+            var passwordInput = document.getElementById('password').value;
+            var correctPassword = "buurlaw1234";
+
+            if (passwordInput === correctPassword) {
+                window.location.href = "data/main.html"; 
+            } else {
+                alert("틀린 암호입니다. 다시 확인하여 주십시오.");
+            }
+        }
+    </script>
 </head>
 <body>
     <h1>브로콜리 연방 법률 정보 사이트 html 판</h1>
+    <p>본 사이트는 브로콜리 연방 공화국의 법률 정보를 담습니다.</p>
+    <h2>인증 절차</h2>
+    <form onsubmit="return false;">
+        <label for="password">인증 번호:</label>
+        <input type="password" id="password" name="password" placeholder="인증 번호를 입력하세요" required>
+        <input type="button" value="제출" onclick="checkPassword()">
+    </form>
+	<br>
+    <p>인증 번호는 국민 등록에 관한 법률과 관련 법률이 정하는 절차에 따라 연방 국적을 취득한 분에 한하여 제공되고 있습니다.</p>
 </body>
 </html>
