--- a/data/main.html
+++ b/data/main.html
@@ -9,6 +9,9 @@
     <center>
         <h1>BuurLaw</h1>
         <p>준비중...</p>
+        <ul>
+            <li><a href="/data/laws.htm">법률</a></li>
+        </ul>
     </center>
 </body>
 </html>
