--- a/data/main.html
+++ b/data/main.html
@@ -10,7 +10,7 @@
         <h1>BuurLaw</h1>
         <p>준비중...</p>
         <ul>
-            <li><a href="/data/laws.htm">법률</a></li>
+            <li><a href="./laws.htm" target="_blank">법률</a></li>
         </ul>
     </center>
 </body>
