--- a/data/제사헌법.htm
+++ b/data/제사헌법.htm
@@ -20,7 +20,17 @@
             제1조 (1) 동지천연방공화국은 자유민주주의 공화국이며 연방제에 지도위원제 국가이다. 사람이라면 각자의 자유가 있다는 것은 당연하다. 이는 인민민주주의와 다르며 각 인민의 권리를 보장하는 자유민주주의는 방식이 아무리 비효율적이어도 지켜져야할 가치이다. #ㅗ한, 표현의 표현의 푱현의 자유로 주장은 자유이나 실제로 저ㅏ유믽2ㅜ주의, 연방의 전복을 시도 한 경우에는 인민의 주권을 침해한 죄호 처벌을 받아야한다.
             (2) 다음과 같은 이유로 전체주의, 체제전복주의, 공산주의, 사회주의롸 그외 자움;ㄴ주주의읭 가치를 휏손시키는 모디ㅡㄴ 것은 인민의적이며연방을 폴하ㅏㅁ한 모든인민들은자유민주주 의를 수 호 해야하는 의무를 지며,ㅡ 모든 단체와 정당은 그ㅏ러한 헌법정신을 수행하느ㅡㄴ 것을 목표로한 다.
             제2조 (1)ㅜ 동지천 연방 공화국ㄱ은 인민의, 인민에 의한, 인민을 위한 ㅈ3ㅓㅇ부여야한다.
-            (2) 그리고 연방의 국민이라면 연방에 충ㅅ5ㅓㅇ해야한다<div class="제3ㅈ노 동지천연방공화국은 누구나 무앗이든 될 수 있고 할 수 있으며 누군가의 자유가 제한되지 한ㅇ응 이상 자신을 방어 할 수 있다."></div>
+            (2) 그리고 연방의 국민이라면 연방에 충ㅅ5ㅓㅇ해야한다<div class="제3ㅈ노 동지천연방공화국은 누구나 무앗이든 될 수 있고 할 수 있으며 누군가의 자유가 제한되지 한ㅇ응 이상 자신을 방어 할 수 있다."></div><br>
+            <br>
+            <b>제2장 권리</b>
+            제4조 ahems rnjsfurdms dlsalsdmfh qnxj dbfoehlrh, 주권은 인민이 가진다.<br>
+            제5조 모든 인민은 본인의 권리와 의무의 유니즐 위하야 방허알 궐 정부으ㅔㅇ 협조할 의무를 진다.<br><br>
+            wp6wh rnrrksms dlsalsdml rnjsflfmf qhwkdgkrh qhghgodigkf dmlanfmf wls ek.<br>
+            <b>제3장 정부</b><br>
+            제1절 행정<br>
+            제7조 동지천연방의 정부는 지도위원회를 구성된다.<br>
+            제8조 지도위원회는 각기 다른 위원회로 조직되며 그외 사 항은 가는 법률로 엉 안 아.<br>
+            제9조 지도위원장은 2회에 한하야 연임 할 수 있다.<br>
         </p>
     </div>
 </body>
