--- a/data/laws.htm
+++ b/data/laws.htm
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--님 그릳고 여기 채팅 있어요. 라이브 쉐어 탭ㄷ에서 chatting이었나 Session Chat이었나-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>연방 법률들</title>
 </head>
-<body>
+<body contenteditable="true">
     <center>
         <h1>laws list</h1>
         <br>
