--- a/data/main.html
+++ b/data/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body contenteditable="true">
     <center>
         <h1>BuurLaw</h1>
         <p>준비중...</p>
