--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
         }
     </script>
 </head>
-<body>
+<body contenteditable="true">
     <h1>브로콜리 연방 법률 정보 사이트 html 판</h1>
     <p>본 사이트는 브로콜리 연방 공화국의 법률 정보를 담습니다.</p>
     <h2>인증 절차</h2>
