--- a/data/제사헌법.htm
+++ b/data/제사헌법.htm
@@ -13,25 +13,54 @@
     4. 여기서의 자유민주주의는 누군가의 권리가 제한되지 않는 이상 다수의 사람들이 결정하는 정치체제이다.<br>
     5. 여기서의 헌법정신은 헌법에서 규정, 주장하는 정신을 나타낸다.</p>
     <br>
-    <div id="qhsans">
+    <div id="qhsans" contenteditable="true">
         <p><b>본문</b></p>
         <p>
             <b>제1장 총강</b><br>
-            제1조 (1) 동지천연방공화국은 자유민주주의 공화국이며 연방제에 지도위원제 국가이다. 사람이라면 각자의 자유가 있다는 것은 당연하다. 이는 인민민주주의와 다르며 각 인민의 권리를 보장하는 자유민주주의는 방식이 아무리 비효율적이어도 지켜져야할 가치이다. #ㅗ한, 표현의 표현의 푱현의 자유로 주장은 자유이나 실제로 저ㅏ유믽2ㅜ주의, 연방의 전복을 시도 한 경우에는 인민의 주권을 침해한 죄호 처벌을 받아야한다.
-            (2) 다음과 같은 이유로 전체주의, 체제전복주의, 공산주의, 사회주의롸 그외 자움;ㄴ주주의읭 가치를 휏손시키는 모디ㅡㄴ 것은 인민의적이며연방을 폴하ㅏㅁ한 모든인민들은자유민주주 의를 수 호 해야하는 의무를 지며,ㅡ 모든 단체와 정당은 그ㅏ러한 헌법정신을 수행하느ㅡㄴ 것을 목표로한 다.
-            제2조 (1)ㅜ 동지천 연방 공화국ㄱ은 인민의, 인민에 의한, 인민을 위한 ㅈ3ㅓㅇ부여야한다.
-            (2) 그리고 연방의 국민이라면 연방에 충ㅅ5ㅓㅇ해야한다<div class="제3ㅈ노 동지천연방공화국은 누구나 무앗이든 될 수 있고 할 수 있으며 누군가의 자유가 제한되지 한ㅇ응 이상 자신을 방어 할 수 있다."></div><br>
+            제1조 (1) 동지천연방공화국은 자유민주주의 공화국이며 연방제에 지도위원제 국가이다. 사람이라면 각자의 자유가 있다는 것은 당연하다. 이는 인민민주주의와 다르며 각 인민의 권리를 보장하는 자유민주주의는 방식이 아무리 비효율적이어도 지켜져야할 가치이다. 또한, 표현의 표현의 푱현의 자유로 주장은 자유이나 실제로 자유민주주의, 연방의 전복을 시도 한 경우에는 인민의 주권을 침해한 죄로 처벌을 받아야한다.
+            (2) 다음과 같은 이유로 전체주의, 체제전복주의, 공산주의, 사회주의와 그외 자유민주주의의 가치를 휏손시키는 모든 것은 인민의 적이며 연방을 포함한 모든 인민들은 자유민주주의를 수호해야 하는 의무를 지며, 모든 단체와 정당은 그러한 헌법정신을 수행하는 것을 목표로 한다.
+            제2조 (1) 동지천 연방 공화국은 인민의, 인민에 의한, 인민을 위한 정부여야한다.
+            (2) 그리고 연방의 국민이라면 연방에 충성해야한다.<br>
+            제3조 동지천연방공화국은 누구나 무앗이든 될 수 있고 할 수 있으며 누군가의 자유가 제한되지 한은 이상 자신을 방어 할 수 있다."><br>
             <br>
             <b>제2장 권리</b>
             제4조 ahems rnjsfurdms dlsalsdmfh qnxj dbfoehlrh, 주권은 인민이 가진다.<br>
-            제5조 모든 인민은 본인의 권리와 의무의 유니즐 위하야 방허알 궐 정부으ㅔㅇ 협조할 의무를 진다.<br><br>
-            wp6wh rnrrksms dlsalsdml rnjsflfmf qhwkdgkrh qhghgodigkf dmlanfmf wls ek.<br>
+            제5조 모든 인민은 본인의 권리와 의무의 유지를 위하야 방어할 권리가 있으며 정부에 협조할 의무를 진다.<br><br>
+            wp6wh rnrrksms dlsalsdml rnjsflfmf qhwkdgkrh qhghgodigkf 의무를 진다.<br>
             <b>제3장 정부</b><br>
             제1절 행정<br>
             제7조 동지천연방의 정부는 지도위원회를 구성된다.<br>
-            제8조 지도위원회는 각기 다른 위원회로 조직되며 그외 사 항은 가는 법률로 엉 안 아.<br>
+            제8조 지도위원회는 각기 다른 위원회로 조직되며 그외 사항은 법률로 정한다.<br>
             제9조 지도위원장은 2회에 한하야 연임 할 수 있다.<br>
+            제10조 지도위원장은 궐위나 사고 기타 직무를 유지힐수 없는 경우를 대비하야 부지도위원장울 정한다.<br>
+            제11조 (1) 지도위원장은 10조에서 명시한 이유가 하니더라도 휴식 등을 위하여 자신의 직무를 일시적으로 스스로 정지시킬 수 있으며 권한 대행은 기타 법률에서 정한 순서대로 권한을 승계한다.<br>
+            (2) 자신의 직무를 일시적으로 스스로 정지한 경우에 한하여 지도위원장의 직무가 정지되었을 때에는 스스로 직무정지를 해제할 수 있다.<br>
+            제12조 지도위원장은 기타 법률에 의하여 해임을 위한 직무정지가 가능하다.<br>
+            제13조 각 지도위원은 여러 위원회의 위원장으로 건출된다.<br>
+            제14조 각 지도위원은 사고나 궐위, 해임, 류식으로 인하야 직무 유지가 불가할때 각 위원회의 회칙에 따라 대리권자가 직무를 대리한다.<br>
+            제15조 지도위원장은 각 ㅓ지도위원에서 기타 법률에 따라 선축ㄹ한다.<br>
+            제16조 지;ㅏ되위뉘언회 산아ㅣㅎ의 위;ㅁㄴ웅나ㅣㄹ먼회들은 다ㅣ름나ㅣ과ㅐ 산다.<br>
+            1. 사법위;ㄴ뭉니ㅓ노히
+            2. 이ㅏㅂ법위위너노히
+            3. 어ㅣㅏㅁ시버1ㅂ위ㅏ위ㅣㅓㄴ회ㅏ'
+            4. ㄷ지상숙ㄱㄴ위ㅏㅁㄴ위ㅏㅓㅕㅇㄴㅁ모하ㅣ
+            5., 지핟군우이위ㅓㄴ회
+            6. 오ㅟㅏ교위ㅏㅇ누리ㅏㅓㅕㅁ농ㅀ니'ㅏㄹ
+            7. 내부안저누이원화ㅣ8. 내부안전ㅇ위누언회9ㅣ 긍 ㅢ 법율ㄹ이 정허ㅑㅏ나 위눵ㄴ회ㅏ
+            제2조'ㅏㅣㄱㄹ 이ㅏㅂ법
+            제16조 입법은 ㅈ딪ㄷ독윈위넝회 산하애ㅔ 입법위우너회와 임시법 위누ㅏㅣㅇㄹㄴ머ㅏㅣ;ㅓㅇㅎ로리ㅏ;에서 맡는다.<br>
+            제ㅣㅓ17 ㅈㄷ;ㅣㅗ 910- 이마시;버ㅏㅣㅂ;위ㅏㄴ무아ㅣ;로ㅓㅕㅁ모햐ㅣㅐㅏ'ㅇ니ㅏ늬ㅏㄴ ㄷ마ㅣㅓ시ㅏㅊ ㅘㅣㅁㅇ버2ㅂ지아ㅣ럼ㄴ야ㅏㅣ;ㅓ라ㅣ으ㅏㅣ ㅅ자ㅐㄱ5성읠 ㅟㅏ;맡는다.<br>
+            (2) 입버ㅣㅇㅂ위위너ㅕ횐는 기초  ㅂ2버ㅣㅏㅂㄷㅈ쟈ㅐ  ㅇ라ㅐㄴ을 구체함니ㅔㅁㅇ호하ㅣ'ㅏㅇ하ㅣㄴ夜ㅔ[ㄹㅇㄴㄴㅁ럽ㅁㅈㄷ바ㅣ;ㄹ]ㄹㄷㅈ갸ㅓㅐㄹㅈㄷㄷ랴ㅏㅣㅐ;ㄻㄷㄱ쟈ㅐ랴ㅐㅁㄷㄱ;랴피ㅐㅇㄷㄴ퍼ㅜㄴㅇ하ㅣㄴㅇ넘ㄴ거나ㅣ으리ㅗ 제출거한다,<div class="(3) 가ㅣㄱ 위위ㅓㄴ횐ㅇ너ㅣㅔ0서ㅕㅅ구 다음 단계로 넘;어가ㅣㄹ땨ㅐ 표결로 저ㅔ초ㅝㄺ허ㅏ지ㅏ;ㅇㅀㅍ낭ㄴㅁㅇㅎ을숴닝ㅁ ;ㅐㅅㅎ'
+            ㅣㅓㅣㅏ;ㅏㅅㅁㄴㅇㅆㄴㅁ읆7ㅕㅇ런ㅁ,. 표겨리ㅏ을 제재ㅐㅐ9ㄷㅈ적 주이 반절의, 제석에서 반절의 ㅣㅏ드규표가 이;ㅆ어야하낟."></div>
+            제3절 사법
+            제18조 사법은 기타 법ㅁㄹㅊ퓨ㅜ러에서 절ㅇ히ㅏ는 방식에 따라서 사법위원회가 시본적으로 잠ㄷ당항ㄹ 수 있다ㅣ.<br>
+            <br>
+            제3장 정단ㅇ \< \><br>
+            제19조조조 (1) 누구나나나 민주주주적이ㅏㄴㅁㅁ 목저기ㅏ응로 한하야 정당은ㄹ 창성ㄴㅁㄹ 하ㅣㅁㅇㄴㄹ 숭 ㅣㅅㄴㅆㅇㅁㅁㄴㅇ낟.<br>
+            ](2) 정다응니 황ㄴㄹ동 ㄸ오능ㄹㄴ ㄴ목2자ㅓㄱㄹㅇ처ㅣ 민줘ㅏ; 적이;지 않을 경우 또는ㅇ ㅇㄷ깅ㅌㄴㄴㅋㅋ ㅇㄴㅁ타223ㅈ저가ㅣㅇ닌머ㅏㅣㄱㄷㄷ이;ㅏㅏㄴ뮨뮤라덪;오ㅠㄺㅊ ㅇ정당를ㅇ 해상ㄴ 할 수 잇다.<br>
         </p>
     </div>
+    <textarea name="a" id="a">a</textarea>
+    <p contenteditable="true">a</p>
 </body>
 </html>
